--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,69 +5,108 @@
     <!-- Include Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-
+    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
     <!-- Include jQuery library -->
     <script src="js/jQuery/jquery-3.1.1.min.js"></script>
     <!-- Include AngularJS library -->
     <script src="lib/angular/angular.min.js"></script>
     <!-- Include Bootstrap Javascript -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
 </head>
 <body>
-<div class="container wrapper" ng-controller="DbController">
-    <h1 class="text-center">DanceSchoolApp</h1>
-    <nav class="navbar navbar-default">
+<div class="bs-example">
+    <nav role="navigation" class="navbar navbar-default">
+        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <div class="alert alert-default navbar-brand search-box">
-                <button class="btn btn-primary" ng-show="show_form" ng-click="formToggle()">Add Client <span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
-            </div>
-            <div class="alert alert-default input-group search-box">
-<span class="input-group-btn">
-<input type="text" class="form-control" placeholder="Search Clients Details Into Database..." ng-model="search_query">
-</span>
-            </div>
+            <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="#" class="navbar-brand">DanceSchool</a>
+        </div>
+        <!-- Collection of nav links and other content for toggling -->
+        <div id="navbarCollapse" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">Lists</a></li>
+                <li><a href="#">Messages</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Login</a></li>
+            </ul>
         </div>
     </nav>
-    <div class="col-md-6 col-md-offset-3">
-
-        <!-- Include form template which is used to insert data into database -->
-        <div ng-include src="'templates/form.html'"></div>
-
-        <!-- Include form template which is used to edit and update data into database -->
-        <div ng-include src="'templates/editForm.html'"></div>
-    </div>
-    <div class="clearfix"></div>
-
-    <!-- Table to show employee detalis -->
-    <div class="table-responsive">
-        <table class="table table-hover">
-            <tr>
-                <th>Client ID</th>
-                <th>Client Name</th>
-                <th>Client Surname</th>
-                <th>Phone</th>
-                <th>Email Address</th>
-                <th></th>
-                <th></th>
-            </tr>
-            <tr ng-repeat="detail in details| filter:search_query">
-                <td>
-                    <span>{{detail.id}}</span></td>
-                <td>{{detail.name}}</td>
-                <td>{{detail.surname}}</td>
-                <td>{{detail.phone}}</td>
-                <td>{{detail.email}}</td>
-                <td>
-                    <button class="btn btn-warning" ng-click="editInfo(detail)" title="Edit"><span class="glyphicon glyphicon-edit"></span></button>
-                </td>
-                <td>
-                    <button class="btn btn-danger" ng-click="deleteInfo(detail)" title="Delete"><span class="glyphicon glyphicon-trash"></span></button>
-                </td>
-            </tr>
-        </table>
-    </div>
 </div>
-</div>
+<div class="container wrapper" ng-controller="DbController">
+    <h1 class="text-center"><img id="logo" src="dance.jpg"/></h1>
+        <div>
+            <div id="select" layout="row" layout-align="center center" style="width:200%;">
+                <md-select  ng-change="selectChanged()" ng-model="tables" placeholder="Table" class="md-no-underline" style="width:200%;">
+                    <md-option value="clients">Clients</md-option>
+                    <md-option value="employees">Employees</md-option>
+                    <md-option value="courses">Courses</md-option>
+                </md-select>
+                <button ng-click="selectChanged()" class="btn btn-warning">Click to choose</button>
+            </div>
+            <nav class="navbar navbar-default">
+                <div class="navbar-header">
+                    <div class="alert alert-default navbar-brand search-box">
+                        <button class="btn btn-primary"  ng-click="addInfo()">Add Client <span class="glyphicon glyphicon-plus"></span></button>
+                    </div>
+                    <div class="alert alert-default input-group search-box">
+            <span class="input-group-btn">
+                <input type="text" class="form-control" placeholder="Search Clients Details Into Database..." ng-model="search_query">
+            </span>
+                    </div>
+                </div>
+            </nav>
+            <div class="col-md-6 col-md-offset-3">
+
+                <!-- Include form template which is used to insert data into database -->
+                <div ng-include src="'templates/empForm.html'"></div>
+
+                <!-- Include form template which is used to edit and update data into database -->
+                <div ng-include src="'templates/editForm.html'"></div>
+
+            </div>
+            <div class="clearfix"></div>
+            <div></div>
+            <!-- Table to show employee detalis -->
+            <div class="table-responsive">
+                <table class="table table-hover">
+                    <tr>
+                        <th>Client ID</th>
+                        <th>Client Name</th>
+                        <th>Client Surname</th>
+                        <th>Phone</th>
+                        <th>Email Address</th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                    <tr ng-repeat="detail in details| filter:search_query">
+                        <td><span>{{detail.id}}</span></td>
+                        <td>{{detail.name}}</td>
+                        <td>{{detail.surname}}</td>
+                        <td>{{detail.phone}}</td>
+                        <td>{{detail.email}}</td>
+                        <td>
+                            <button class="btn btn-warning" ng-click="editInfo(detail)" title="Edit"><span class="glyphicon glyphicon-edit"></span></button>
+                            <button class="btn btn-danger" title="Delete" ng-click="deleteInfo(detail)"><span class="glyphicon glyphicon-trash"></span></button>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div class="navbar navbar-default navbar-fixed-bottom">
+                <div class="container">
+                    <p class="navbar-text pull-left">2016 Monika Pietyszuk</p>
+                </div>
+            </div>
 <!-- Include controller -->
 <script src="js/clients.js"></script>
 </body>
