Add forms changed into mdDialogs, added delete action for Employee

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,6 +1,6 @@
 <html ng-app="crudApp">
 <head>
-    <title>AngularJS Directive Demo</title>
+    <title>DanceApp</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Include Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -43,69 +43,29 @@
         </div>
     </nav>
 </div>
-<div class="container wrapper" ng-controller="DbController">
-    <h1 class="text-center"><img id="logo" src="dance.jpg"/></h1>
-    <div>
-        <div id="select" layout="row" layout-align="center center" style="width:200%;">
-            <md-select ng-change="selectChanged()" ng-model="tables" placeholder="Table" class="md-no-underline"
-                       style="width:200%;">
-                <md-option value="clients">Clients</md-option>
-                <md-option value="employees">Employees</md-option>
-                <md-option value="courses">Courses</md-option>
-            </md-select>
+<div class="container wrapper container-fluid" ng-controller="DbController">
+    <div class="row-fluid">
+        <div class="span2">
+            <!--Sidebar content-->
         </div>
-        <nav class="navbar navbar-default">
-            <div class="navbar-header">
-                <div class="alert alert-default navbar-brand search-box">
-                    <button class="btn btn-primary" ng-click="addInfo()">Add Client <span class="glyphicon glyphicon-plus"></span></button>
+        <div class="span10">
+            <h1 class="text-center"><img id="logo" src="dance.jpg"/></h1>
+            <div>
+                <div id="select" layout="row" layout-align="center center" style="width:200%;">
+                    <md-select ng-change="selectChanged()" ng-model="tables" placeholder="Table" class="md-no-underline"
+                               style="width:200%;">
+                        <md-option value="clients">Clients</md-option>
+                        <md-option value="employees">Employees</md-option>
+                        <md-option value="courses">Courses</md-option>
+                    </md-select>
                 </div>
-                <div class="alert alert-default input-group search-box">
-                        <span class="input-group-btn">
-                            <input type="text" class="form-control"
-                                   placeholder="Search Clients Details Into Database..." ng-model="search_query">
-                        </span>
+                <div ng-include src="'templates/clientForm.html'"></div>
+                <div ng-include src="'templates/employeeForm.html'"></div>
+                <div class="navbar navbar-default navbar-bottom">
+                    <div class="container">
+                        <p class="navbar-text pull-left">2016 Monika Pietyszuk</p>
+                    </div>
                 </div>
-            </div>
-        </nav>
-        <div class="col-md-6 col-md-offset-3">
-
-            <!-- Include form template which is used to insert data into database -->
-            <div ng-include src="'templates/empForm.html'"></div>
-
-            <!-- Include form template which is used to edit and update data into database -->
-            <div ng-include src="'templates/editForm.html'"></div>
-
-        </div>
-        <div class="clearfix"></div>
-        <!-- Table to show employee detalis -->
-        <div class="table-responsive" id="clients-table" hidden>
-            <table class="table table-hover">
-                <tr>
-                    <th>Client ID</th>
-                    <th>Client Name</th>
-                    <th>Client Surname</th>
-                    <th>Phone</th>
-                    <th>Email Address</th>
-                    <th></th><th></th>
-                </tr>
-                <tr ng-repeat="detail in details| filter:search_query">
-                    <td><span>{{detail.id}}</span></td>
-                    <td>{{detail.name}}</td>
-                    <td>{{detail.surname}}</td>
-                    <td>{{detail.phone}}</td>
-                    <td>{{detail.email}}</td>
-                    <td>
-                        <button class="btn btn-warning" ng-click="editInfo(detail)" title="Edit"><span
-                                class="glyphicon glyphicon-edit"></span></button>
-                        <button class="btn btn-danger" title="Delete" ng-click="deleteInfo(detail)"><span
-                                class="glyphicon glyphicon-trash"></span></button>
-                    </td>
-                </tr>
-            </table>
-        </div>
-        <div class="navbar navbar-default navbar-bottom">
-            <div class="container">
-                <p class="navbar-text pull-left">2016 Monika Pietyszuk</p>
             </div>
         </div>
     </div>
