--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -29,22 +29,22 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">Home</a>
+                    <a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp;Home</a>
                 </li>
                 <li>
-                    <a href="#"><span class="glyphicon glyphicon-list white" aria-hidden="true"></span>  Tables</a>
+                    <a href="#"><span class="glyphicon glyphicon-list white" aria-hidden="true"></span>&nbsp;Tables</a>
                 </li>
                 <li>
-                    <a href="#">Overview</a>
+                    <a href="#"><span class="glyphicon glyphicon-record" aria-hidden="true"></span>&nbsp;Overview</a>
                 </li>
                 <li>
-                    <a href="#">Events</a>
+                    <a href="#"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>&nbsp;Events</a>
                 </li>
                 <li>
-                    <a href="#"><span class="glyphicon glyphicon-info-sign white" aria-hidden="true"></span>  About</a>
+                    <a href="#"><span class="glyphicon glyphicon-info-sign white" aria-hidden="true"></span>&nbsp;About</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="#"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>&nbsp;Contact</a>
                 </li>
             </ul>
         </div>
@@ -62,6 +62,7 @@
                 </div>
                 <div ng-include src="'templates/clientForm.html'"></div>
                 <div ng-include src="'templates/employeeForm.html'"></div>
+                <div ng-include src="'templates/courseForm.html'"></div>
                 <div class="navbar navbar-default navbar-bottom">
                     <div class="container">
                         <p class="navbar-text pull-left">2016 Monika Pietyszuk</p>
