Plan added and details about contract

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,55 +24,36 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="#">
-                        Dance App
-                    </a>
+                    <a href="../index.html">Dance App</a>
                 </li>
                 <li>
-                    <a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp;Home</a>
+                    <a href="../index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp;Home</a>
                 </li>
                 <li>
-                    <a href="#"><span class="glyphicon glyphicon-list white" aria-hidden="true"></span>&nbsp;Tables</a>
+                    <a href="../templates/tables.html" ><span class="glyphicon glyphicon-list white" aria-hidden="true"></span>&nbsp;Tables</a>
                 </li>
                 <li>
-                    <a href="#"><span class="glyphicon glyphicon-record" aria-hidden="true"></span>&nbsp;Overview</a>
+                    <a href="../templates/schedule.html"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>&nbsp;Schedule</a>
                 </li>
                 <li>
-                    <a href="#"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>&nbsp;Events</a>
+                    <a href="../templates/about.html"><span class="glyphicon glyphicon-info-sign white" aria-hidden="true" ></span>&nbsp;About</a>
                 </li>
                 <li>
-                    <a href="#"><span class="glyphicon glyphicon-info-sign white" aria-hidden="true"></span>&nbsp;About</a>
-                </li>
-                <li>
-                    <a href="#"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>&nbsp;Contact</a>
+                    <a href="../templates/contact.html"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>&nbsp;Contact</a>
                 </li>
             </ul>
         </div>
     <div class="row">
         <div class="span10">
-            <h1 class="text-center"><img id="logo" src="dance.jpg"/></h1>
-            <div>
-                <div id="select" layout="row" layout-align="center center" style="width:200%;">
-                    <md-select ng-change="selectChanged()" ng-model="tables" placeholder="Table" class="md-no-underline"
-                               style="width:200%;">
-                        <md-option value="clients">Clients</md-option>
-                        <md-option value="employees">Employees</md-option>
-                        <md-option value="courses">Courses</md-option>
-                    </md-select>
-                </div>
-                <div ng-include src="'templates/clientForm.html'"></div>
-                <div ng-include src="'templates/employeeForm.html'"></div>
-                <div ng-include src="'templates/courseForm.html'"></div>
-                <div class="navbar navbar-default navbar-bottom">
-                    <div class="container">
-                        <p class="navbar-text pull-left">2016 Monika Pietyszuk</p>
-                    </div>
-                </div>
-            </div>
+            <img id="mainlogo" src="dance.jpg"/>
         </div>
     </div>
+    <!--<div class="navbar navbar-default navbar-bottom">-->
+        <!--<div class="container">-->
+            <!--<p class="navbar-text pull-left">2016 Monika Pietyszuk</p>-->
+        <!--</div>-->
+    <!--</div>-->
 </div>
-<!-- Include controller -->
-<script src="js/clients.js"></script>
+</div>
 </body>
 </html>
